[package]
name = "docker-pose"
version = "0.4.0-b4"
edition = "2021"
authors = ["Mariano Ruiz <mrsarm@gmail.com>"]
description = "Command line tool to play with 🐳 Docker Compose files."
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/mrsarm/pose"
repository = "https://github.com/mrsarm/pose"
categories = ["docker", "command-line-interface"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-num = "1.1"
colored = "2.1"
lazy_static = "1.4"
serde_yaml = "0.9"
strum_macros = "0.26"
regex = "1.10"

[dev-dependencies]
pretty_assertions = "1.4.0"
serial_test = "3.0"

[profile.release]
# This is going to be the default soon if not provided
strip = "debuginfo"

[[bin]]
name = "pose"
path = "src/main.rs"
